--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "draft-js": "^0.10.5",
+    "draft-js-export-html": "^1.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-draft-wysiwyg": "^1.12.13",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
