--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.2.0",
+    "howler": "^2.0.15",
     "moment": "^2.22.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -15,7 +16,8 @@
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^0.82.3"
+    "semantic-ui-react": "^0.82.3",
+    "tm-ticker": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
