--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "recorder-js": "^1.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.82.3",
