--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,6 +10,6 @@
   ],
   "start_url": "./index.html",
   "display": "standalone",
-  "theme_color": "##2f4f4f",
-  "background_color": "##2f4f4f"
+  "theme_color": "#2f4f4f",
+  "background_color": "#2f4f4f"
 }
