--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.4.2",
     "react-draft-wysiwyg": "^1.12.13",
     "react-dropzone": "^5.1.0",
+    "react-https-redirect": "^1.0.10",
     "react-moment": "^0.7.9",
     "react-pose": "^3.2.2",
     "react-rangeslider": "^2.2.0",
