--- a/public/manifest.json
+++ b/public/manifest.json
@@ -24,7 +24,7 @@
     },
     {
       "src": "https://www.dropbox.com/s/53xu4po9t9ev16l/favicon.ico?raw=1",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "64x64 32x32 24x24 16x16 512x512",
       "type": "image/png"
     }
   ],
