--- a/public/manifest.json
+++ b/public/manifest.json
@@ -63,7 +63,7 @@
       "type": "image/svg"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "./",
   "display": "standalone",
   "theme_color": "#2f4f4f",
   "background_color": "#2f4f4f"
