--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-draft-wysiwyg": "^1.12.13",
     "react-dropzone": "^5.1.0",
     "react-https-redirect": "^1.0.10",
+    "react-loadable": "^5.5.0",
     "react-moment": "^0.7.9",
     "react-pose": "^3.2.2",
     "react-rangeslider": "^2.2.0",
